# unifi-mcp

./: .env.example  .gitignore  README.md  TESTING.md  coverage.xml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependency-scan.yml  upstream-sync.yml
src/unifi_mcp/: __init__.py  config.py  exceptions.py  server.py
src/unifi_mcp/auth/: __init__.py  local.py
src/unifi_mcp/clients/: __init__.py  base.py  network.py  protect.py
src/unifi_mcp/tools/: __init__.py
src/unifi_mcp/tools/network/: __init__.py  clients.py  devices.py  insights.py  sites.py  stats.py
src/unifi_mcp/tools/protect/: __init__.py  cameras.py
src/unifi_mcp/utils/: __init__.py  logging.py  privacy.py
tests/: __init__.py  conftest.py  test_auth_advanced.py  test_base_advanced.py  test_config.py  test_filename_sanitization.py  test_insights_deep.py  test_insights_tools.py  test_local_auth.py  test_network_client.py  test_network_tools.py  test_protect_auth.py  test_protect_client.py  test_protect_events.py  test_protect_tools.py  test_server.py  test_sites_tools.py  test_stats_tools.py
